# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: general.yml
migrations/: 20200910110336_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: healthcheck.rs  mod.rs  subscriptions.rs
tests/: healthcheck.rs
