[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Bechma"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.10"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"


[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
